--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -15,4 +16,9 @@ code {
 #krustyKrabLogo {
   color: rgb(207, 228, 25);
   margin-right: 10px;
+}
+
+.card {
+  background-color: rgba(50, 200, 205, 0.514);
+  align-items: center;
 }
