--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  background-color: rgba(0, 128, 128, 0.411);
 }
 
 code {
@@ -21,4 +21,11 @@ code {
 .card {
   background-color: rgba(50, 200, 205, 0.514);
   align-items: center;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+.pics {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
