--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(0, 128, 128, 0.411);
+  background-color: rgba(0, 128, 128, 0.329);
 }
 
 code {
@@ -15,17 +15,27 @@ code {
 
 #krustyKrabLogo {
   color: rgb(207, 228, 25);
-  margin-right: 10px;
+  margin-right: 12px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
 }
 
 .card {
-  background-color: rgba(50, 200, 205, 0.514);
+  background-color: rgba(95, 205, 209, 0.486);
   align-items: center;
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .pics {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.content {
+  font-size: large;
+}
+
+.form-control {
+  font-style: italic;
 }
