--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,5 +37,6 @@ code {
 }
 
 .form-control {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-style: italic;
 }
